change user pass rabbit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,21 @@ services:
     env_file:
       - .env
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    env_file:
+      - .env
+    networks:
+      - app-net
+  
   scheduler:
     build: ./scheduler
+    depends_on:
+      - mongo
+      - rabbitmq
     networks:
       - app-net
     env_file:
@@ -33,6 +46,7 @@ services:
     environment:
       MONGO_URI: "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/"
       DB_NAME: "ipa2025_db"
+
 volumes:
   mongo-data:
 
