--- a/web/manifests/services.yaml
+++ b/web/manifests/services.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-web-svc
+  name: msapp-web-svc
+  namespace: ipa2025
 spec:
   selector:
-    app: sample-web
+    app: msapp-web
   ports:
     - port: 80
       targetPort: 8080
-  type: ClusterIP
