--- a/web/manifests/services.yaml
+++ b/web/manifests/services.yaml
@@ -1,9 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: msapp-web-svc
+  name: ipa2025-msapp-web-service
   namespace: ipa2025
 spec:
+  selector:
+    app: ipa2025-msapp-web
   ports:
     - port: 80
-      targetPort: 8080 
+      targetPort: 8080
+  type: ClusterIP
