--- a/web/manifests/services.yaml
+++ b/web/manifests/services.yaml
@@ -8,5 +8,5 @@ spec:
     app: ipa2025-msapp-web
   ports:
     - port: 80
-      targetPort: 80                       # ✅ ให้ตรงกับ containerPort ด้านบน
+      targetPort: 8080
   type: ClusterIP
