--- a/worker/manifests/scaledobject.yaml
+++ b/worker/manifests/scaledobject.yaml
@@ -13,10 +13,7 @@ spec:
   triggers:
     - type: rabbitmq
       metadata:
+        hostFromEnv: RABBITMQ_URI   # ← ใช้ตัวเดียวพอ
         queueName: router_jobs
         mode: QueueLength
         value: "10"
-        protocol: auto
-        hostFromEnv: RABBITMQ_HOST 
-        usernameFromEnv: RABBITMQ_DEFAULT_USER
-        passwordFromEnv: RABBITMQ_DEFAULT_PASS
